kubernetes/base/tdi-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tdi
  labels:
    app: tdi
    component: api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: tdi
    component: api
